# weis-award

./: .gitignore  20_4.txt  Auto_Weis.cpp  CMakeLists.txt  README.md  WeisAward.cpp  WeisCalculator.cpp  WeisCalculator.h  WeisReader.cpp  WeisReader.h
Output/: Resultado_20_4.txt
in-out/: 20_4.txt  Instrucoes.txt  Result_20_4.txt  Weis_Statistics.txt
src/: WeisAward.cpp  WeisCalculator.cpp  WeisCalculator.h  WeisReader.cpp  WeisReader.h
